/* XABSL debug output
**
**
** (based on NaoTHs structure)
*/

package de.fumanoids.message;


message XABSLParameter {
	enum ParamType {
		Decimal = 0;
		Boolean = 1;
		Enum    = 2;
		Unknown = 3;
	}

	optional string    name         = 1 [default="unknown"];
	optional ParamType type         = 2 [default=Unknown];
	optional double    decimalValue = 3;
	optional bool      boolValue    = 4;
	optional string    enumValue    = 5;
}

message XABSLAction {
	enum ActionType {
		Option              = 0;
		BasicBehavior       = 1;
		DecimalOutputSymbol = 2;
		BooleanOutputSymbol = 3;
		EnumOutputSymbol    = 4;
		Unknown             = 5; 
	}

	optional ActionType     type             = 1 [default=Unknown];
	optional string         name             = 2 [default="unknown"];
  
	// for options
	optional int64          timeOfExecution  = 3 [default=0];
	optional string         activeState      = 4;
  
	optional int64          stateTime        = 5;
	repeated XABSLParameter parameters       = 6;
  
	repeated XABSLAction    activeSubActions = 7;
  
	// for parameters
	optional double         decimalValue     = 8;
	optional bool           boolValue        = 9;
	optional string         enumValue        = 10;
}

message BehaviorStatus {
	optional string         agent             = 1;
	repeated XABSLAction    activeRootActions = 2;
	repeated XABSLParameter inputSymbols      = 3;
	repeated XABSLParameter outputSymbols     = 4;
}

message BehaviorInformation {
	repeated string         availableAgents   = 1;
}
